fix: logo align issue

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ a:hover {
   background-color: #001529;
   display: flex;
   padding: 20px;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
 }
 .logo {
